# AlgoInterface

./: README.md  nasdaq_client.py  nasdaq_model.py  pyproject.toml
nasdaq/: nasdaq_client.py  nasdaq_model.py
stream_ingestion/: docker-compose.yml  feeder_client.py
