[tool.poetry]
name = "AlgoInterface"
version = "0.0.0"
description = "An algorithmic interface."

authors = [
    "Badger Ducky <badgerducky@gmail.com>",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.13.0"
pydantic = "^2.0.2"
